--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - 3.6
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install pipenv
+  - pipenv install
 # command to run tests
 script:
-  - pytest
+  - pipenv run pytest .
